using absolute references

--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -16,6 +16,9 @@ $info
 \materials{\infomaterials}
 \additionalinformation{\infoadditionalinformation}
 
+\newcommand{\questions}{$questions}
+\newcommand{\omranswers}{$omranswers}
+
 
 %% rest of the template
 \usepackage{amsmath,amssymb}
@@ -221,7 +224,7 @@ questions with multiple choices, mark all solutions that are correct
 \vspace{0.5em}
 
 \begin{multicols}{3}
-  $omranswers
+  \omranswers
 \end{multicols}
 
 
@@ -235,6 +238,6 @@ This page is intentionally left blank.
 
 \pagebreak
 
-$questions
+\questions
 
 \end{document}
