fixing tables in latex

--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -16,8 +16,7 @@ $info
 \materials{\infomaterials}
 \additionalinformation{\infoadditionalinformation}
 
-\newcommand{\questions}{$questions}
-\newcommand{\omranswers}{$omranswers}
+\usepackage{longtable,booktabs}
 
 
 %% rest of the template
@@ -224,7 +223,7 @@ questions with multiple choices, mark all solutions that are correct
 \vspace{0.5em}
 
 \begin{multicols}{3}
-  \omranswers
+  $omranswers
 \end{multicols}
 
 
@@ -238,6 +237,6 @@ This page is intentionally left blank.
 
 \pagebreak
 
-\questions
+$questions
 
 \end{document}
