added continuous compilation

--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -3,6 +3,20 @@
 %% loading information to template
 $info
 
+\providecommand{\infoprogrammeyearname}{}
+\providecommand{\infoexamsemester}{}
+\providecommand{\infoexamyear}{}
+\providecommand{\infoexamdate}{}
+\providecommand{\infoexamtime}{}
+\providecommand{\infoexamvenue}{}
+\providecommand{\infomodulename}{}
+\providecommand{\infomodulecode}{}
+\providecommand{\infoexaminer}{}
+\providecommand{\infoinstructions}{}
+\providecommand{\infomaterials}{}
+\providecommand{\infoadditionalinformation}{}
+
+
 \programmeyearname{\infoprogrammeyearname}
 \examsemester{\infoexamsemester}
 \examyear{\infoexamyear}
