--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -198,7 +198,19 @@ $info
 \pagestyle{plain}
 \maketitle
 
-\vspace*{-5em}
+
+\pagebreak
+
+\vspace*{7cm}
+
+\begin{center}
+This page is intentionally left blank.
+\end{center}
+
+\pagebreak
+
+
+\vspace*{-4em}
 \begin{minipage}[t]{.6\linewidth}
 Student Name: \tabto{3cm} \underline{\hspace{6cm}}
 
