--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -212,18 +212,12 @@ This page is intentionally left blank.
 
 \vspace*{-4em}
 \begin{minipage}[t]{.6\linewidth}
-Student Name: \tabto{3cm} \underline{\hspace{6cm}}
+Exam Number: \tabto{3cm} \underline{\hspace{6cm}}
 
-Student Number : \tabto{3.5cm} \underline{\hspace{5.5cm}}
+Seat Number : \tabto{3.5cm} \underline{\hspace{5.5cm}}
 \end{minipage}
 \begin{minipage}[t]{.4\linewidth}
-  Mark your student number below
-
-  \omrDIGITS
-
-  \omrDIGITS
-
-  \omrDIGITS
+  Mark your exam number below
 
   \omrDIGITS
 
