--- a/bbquiz/templates/tcd-eleceng-exam.tex
+++ b/bbquiz/templates/tcd-eleceng-exam.tex
@@ -194,20 +194,28 @@ $info
 \usepackage{tabto}
 \usepackage{multicol}
 
+
+\makeatletter
+\def\cleardoublepage{\clearpage\if@twoside \ifodd\c@page\else
+  \hbox{}
+  \vspace*{\fill}
+  \begin{center}
+    This page was intentionally left blank.
+  \end{center}
+  \vspace{\fill}
+  \thispagestyle{empty}
+  \newpage
+  \if@twocolumn\hbox{}\newpage\fi\fi\fi}
+\makeatother
+
+
+
 \begin{document}
 \pagestyle{plain}
 \maketitle
 
 
-\pagebreak
-
-\vspace*{7cm}
-
-\begin{center}
-This page is intentionally left blank.
-\end{center}
-
-\pagebreak
+\cleardoublepage
 
 
 \vspace*{-4em}
@@ -246,16 +254,7 @@ questions with multiple choices, mark all solutions that are correct
   $omranswers
 \end{multicols}
 
-
-\pagebreak
-
-\vspace*{7cm}
-
-\begin{center}
-This page is intentionally left blank.
-\end{center}
-
-\pagebreak
+\cleardoublepage
 
 $questions
 
